--- a/cake baker/index.html
+++ b/cake baker/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>BAKER'S STOP</title>
-        <link rel="stylesheet" href="../css/b1.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
