Changed folder name,file name,image name

--- a/product_landing/index.html
+++ b/product_landing/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>JS(JavaScript)</title>
-        <link rel="stylesheet" href="../css/pro.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -17,7 +17,7 @@
         </header>
         <h2>You dont know JavaScript</h2>
         <div class="container">
-            <img src="/home/utsav/product landing/html/js.jpg" alt="JS BOOK IMAGE">
+            <img src="img/product.jpg" alt="JS BOOK IMAGE">
             <p>Dont just drift through javascript <br>Understand hoe javascript works <br>Start your journey through the bumpy side of javascript</p>
             <div class="button1">
                 <input type="button" value="ORDER YOUR COPY NOW">
