--- a/sample_form/index.html
+++ b/sample_form/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>FORM</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css1/c1.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
             <h1>Survey Form</h1>
