--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Projects</title>
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <header>
+            <div class="container">
+                <h1>Utsav's DevBooth</h1>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>My Projects</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+
+            </div>
+        </header>
+        <div class="container">
+            <h1>My Projects</h1>
+            <ul>
+                <li><a href="./sample_form/index.html" target="blank">A Survey Form(Sample)</a></li>
+                <li><a href="./product_landing/index.html" target="blank">Product(Book) Landing Page</a></li>
+                <li><a href="./cake_baker/index.html" target="blank">A Cake Shop Page</a></li>
+                <li><a href="./MyWebDesign/index.html" target="blank">Website Management for a company DevNation</a></li>
+            </ul>
+        </div>
+        
         
     </body>
 </html>
