--- a/cake_baker/index.html
+++ b/cake_baker/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>BAKER'S STOP</title>
         <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
         <header>
