--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>Kolhapur,India</p>
                 <h1>About</h1>
                 <p>I'm a Computer Science student who is interested in Web Development, learning new stuff in programming.</p>
-                <p>I'm currently learning HTML & CSS and also working on some projects for the same.</p>
+                <p>I'm currently learning HTML,CSS & JavaScript and also working on some projects for the same.</p>
                 <p>And also looking forward to discover new things in development</p>
 
         </div>
